Fixed rounded corners on code frame scrollbars

--- a/src/ui/modules/FileViewer/_hljs.scss
+++ b/src/ui/modules/FileViewer/_hljs.scss
@@ -16,6 +16,8 @@ code.hljs {
 
     &-track {
       background: $bg-main;
+      border-radius: 10px;
+
     }
 
     &-thumb {
